wp_contextual/tests/error_unexpected_wp_context_punct.stderr
error: Did you mean ','?
 --> tests/error_unexpected_wp_context_punct.rs:5:21
  |
5 |     #[WpContext(edit. view)]
  |                     ^
